--- a/experiments/tests/test_CAE.yaml
+++ b/experiments/tests/test_CAE.yaml
@@ -24,19 +24,20 @@ train:
 #Model arguments
 model:
   type: "CAE" #str <CAE|QCAE|QCNN>
+  module: "skip" #str <skip|pool>, CAE and QCAE only
   spatial_dim: 2 #int
   latent_dim: 10 #int
-  stages: 1 #int
+  stages: 2 #int
   loss_fn: "SobolevLoss" #str, SobolevLoss or loss from torch.nn
   optimizer: "Adam" #str, optimizer from torch.optim
   learning_rate: 0.01 #float
 
   conv_params:
-    num_points_in: [2500, 100] #list[int], length stages+1 or 1
-    num_points_out: [100, 25] #list[int], length stages+1 or 1
-    in_channels: [1, 2] #list[int], length stages+1 or 1
-    out_channels: [2, 2] #list[int], length stages+1 or 1
-    use_bias: [True, True] #list[bool], length stages+1 or 1
+    in_points: [] #list[int]
+    out_points: [] #list[int]
+    in_channels: [1, 2] #list[int]
+    out_channels: [2, 3] #list[int]
+    bias: [True, True] #list[bool]
 
 #PT LightningDataModule arguments
 data:
