--- a/experiments/tests/test_CAE.yaml
+++ b/experiments/tests/test_CAE.yaml
@@ -4,8 +4,8 @@
 #Documentation: https://pytorch-lightning.readthedocs.io/en/stable/common/trainer.html
 #Comment out options you aren't using
 train:
-  accelerator: "gpu" #str, e.g. "gpu"
-  devices: 1 #int
+  accelerator: "cpu" #str, e.g. "gpu"
+  # devices: 1 #int
   # num_nodes: #int
   # strategy: #str
   # precision: #str
@@ -27,17 +27,17 @@ model:
   module: "skip" #str <skip|pool>, CAE and QCAE only
   spatial_dim: 2 #int
   latent_dim: 10 #int
-  stages: 2 #int
+  stages: 1 #int
   loss_fn: "SobolevLoss" #str, SobolevLoss or loss from torch.nn
   optimizer: "Adam" #str, optimizer from torch.optim
   learning_rate: 0.01 #float
 
   conv_params:
-    in_points: [] #list[int]
-    out_points: [] #list[int]
-    in_channels: [1, 2] #list[int]
-    out_channels: [2, 3] #list[int]
-    bias: [True, True] #list[bool]
+    in_points: [50] #list[int]
+    out_points: [12] #list[int]
+    in_channels: [1] #list[int]
+    out_channels: [2] #list[int]
+    bias: [True] #list[bool]
 
 #PT LightningDataModule arguments
 data:
