--- a/experiments/template.yaml
+++ b/experiments/template.yaml
@@ -25,11 +25,12 @@ train:
 model:
   type: #str <CAE|QCAE|QCNN>
   module: #str <skip|pool>, CAE and QCAE only
-  spatial_dim: #int
-  latent_dim: #int
+  spatial_dim: #int, AE only
+  mlp_dim: #int, QCNN only
+  latent_dim: #int, AE only
   point_seq: #list[int], QC only
   stages: #int
-  loss_fn: #str, SobolevLoss or loss from torch.nn
+  loss_fn: #str, SobolevLoss or loss from torch.nn, AE only
   optimizer: #str, optimizer from torch.optim
   learning_rate: #float
 
@@ -44,18 +45,18 @@ model:
 
 #PT LightningDataModule arguments
 data:
-  module: #str <grid_data|mesh_data>
+  module: #str <grid_data|mesh_data|modelnet_data>
   data_dir: #str
   spatial_dim: #int
   num_points: #int, mesh only
   batch_size: #int
   size: #int, grid only
   stride: #int, grid only
-  channels: #list[int]
+  channels: #list[int], AE only
   shuffle: #bool
 
 #Miscellaneous arguments
 misc:
-  make_gif: #bool
+  make_gif: #bool, AE only
   compute_stats: #bool
   early_stopping: #bool
