--- a/experiments/tests/test_QCAE.yaml
+++ b/experiments/tests/test_QCAE.yaml
@@ -50,7 +50,7 @@ data:
   spatial_dim: 2 #int
   num_points: 2500 #int, mesh only
   batch_size: 16 #int
-  channels: [1] #list[int]
+  channels: [1] #list[int], AE only
   shuffle: True #bool
 
 #Miscellaneous arguments
