--- a/experiments/tests/test_QCNN.yaml
+++ b/experiments/tests/test_QCNN.yaml
@@ -4,55 +4,50 @@
 #Documentation: https://pytorch-lightning.readthedocs.io/en/stable/common/trainer.html
 #Comment out options you aren't using
 train:
-  accelerator: #str, e.g. "gpu"
-  devices: #int
-  num_nodes: #int
-  strategy: #str
-  precision: #str
-  auto_scale_batch_size: #bool
-  auto_select_gpus: #bool
-  enable_checkpointing: #bool
-  check_val_every_n_epoch: #int
-  default_root_dir: #str
-  logger: #bool
-  log_every_n_steps: #int
-  enable_progress_bar: #bool
-  profiler: #str
-  max_epochs: #int
-  max_steps: #int
+  accelerator: "gpu" #str, e.g. "gpu"
+  devices: 1 #int
+  # num_nodes: #int
+  # strategy: #str
+  # precision: #str
+  # auto_scale_batch_size: #bool
+  # auto_select_gpus: #bool
+  enable_checkpointing: False #bool
+  check_val_every_n_epoch: 1 #int
+  default_root_dir: "./lightning_logs" #str
+  logger: False #bool
+  # log_every_n_steps: #int
+  enable_progress_bar: True #bool
+  # profiler: #str
+  max_epochs: 2 #int
+  # max_steps: #int
 
 #Model arguments
 model:
-  type: #str <CAE|QCAE|QCNN>
-  spatial_dim: #int
-  latent_dim: #int
-  stages: #int
-  loss_fn: #str, SobolevLoss or loss from torch.nn
-  optimizer: #str, optimizer from torch.optim
-  learning_rate: #float
+  type: "QCNN" #str <CAE|QCAE|QCNN>
+  mlp_dim: 100 #int
+  stages: 1 #int
+  optimizer: "Adam" #str, optimizer from torch.optim
+  learning_rate: 0.01 #float
 
   conv_params:
-    point_seq: #list[int]
-    channel_seq: #list[int]
-    use_bias: #list[bool]
-    filter_seq: #list[int], QC only
-    filter_mode: #string <single|share_in|nested>, QC only
+    in_points: [1024] #list[int]
+    out_points: [512] #list[int]
+    in_channels: [3] #list[int]
+    out_channels: [6] #list[int]
+    bias: [True] #list[bool]
+    filter_seq: [[4, 4]] #[list[int]], QC only
+    filter_mode: ["single"] #string <single|share_in|nested>, QC only
 
 
 #PT LightningDataModule arguments
 data:
-  module: #str <grid_data|mesh_data>
-  data_dir: #str
-  spatial_dim: #int
-  num_points: #int, mesh only
-  batch_size: #int
-  size: #int, grid only
-  stride: #int, grid only
-  channels: #list[int]
-  shuffle: #bool
+  module: "modelnet_data" #str <grid_data|mesh_data>
+  data_dir: "data/modelnet40" #str
+  batch_size: 8 #int
+  shuffle: True #bool
 
 #Miscellaneous arguments
 misc:
-  make_gif: #bool
-  compute_stats: #bool
-  early_stopping: #bool
+  make_gif: False #bool
+  compute_stats: False #bool
+  early_stopping: False #bool
