--- a/experiments/template.yaml
+++ b/experiments/template.yaml
@@ -23,32 +23,40 @@ train:
 
 #Model arguments
 model:
-  module: #str
-  conv_type: #str <standard|quadrature>
-  spatial_dim: #int
-  latent_dim: #int
-  point_seq: #list
-  channel_seq: #list
-  filter_seq: #list, quadconv only
-  filter_mode: #string <single|share_in|nested>, quadconv only
-  quad_weights: #string <implicit|quadrature>, quadconv only
-  loss_fn: #str, SobolevLoss or loss from torch.nn
+  type: #str <CAE|QCAE|QCNN>
+  module: #str <skip|pool>, CAE and QCAE only
+  spatial_dim: #int, AE only
+  mlp_dim: #int, QCNN only
+  latent_dim: #int, AE only
+  point_seq: #list[int], QC only
+  stages: #int
+  loss_fn: #str, SobolevLoss or loss from torch.nn, AE only
   optimizer: #str, optimizer from torch.optim
   learning_rate: #float
 
+  conv_params:
+    in_points: #list[int]
+    out_points: #list[int]
+    in_channels: #list[int]
+    out_channels: #list[int]
+    bias: #list[bool]
+    filter_seq: #[list[int]], QC only
+    filter_mode: #[string] <single|share_in|nested>, QC only
+
 #PT LightningDataModule arguments
 data:
+  module: #str <grid_data|mesh_data|modelnet_data>
   data_dir: #str
   spatial_dim: #int
+  num_points: #int, mesh only
   batch_size: #int
-  size: #int
-  stride: #int
-  flatten: #bool, True for quadconv only
-  channels: #list
+  size: #int, grid only
+  stride: #int, grid only
+  channels: #list[int], AE only
   shuffle: #bool
 
 #Miscellaneous arguments
 misc:
-  make_gif: #bool
+  make_gif: #bool, AE only
   compute_stats: #bool
   early_stopping: #bool
