--- a/experiments/tests/test_QCAE_skip_uniform.yaml
+++ b/experiments/tests/test_QCAE_skip_uniform.yaml
@@ -14,7 +14,7 @@ train:
   enable_checkpointing: False #bool
   check_val_every_n_epoch: 1 #int
   default_root_dir: "./lightning_logs" #str
-  logger: False #bool
+  logger: True #bool
   # log_every_n_steps: #int
   enable_progress_bar: True #bool
   # profiler: #str
@@ -23,20 +23,21 @@ train:
 
 #Model arguments
 model:
-  type: "QCNN" #str <CAE|QCAE|QCNN>
-  spatial_dim: 3
-  point_seq: [1024, 512] #list[int], QC only
-  mlp_dim: 100 #int
+  type: "QCAE" #str <CAE|QCAE|QCNN>
+  module: "skip" #str <skip|pool>, CAE and QCAE only
+  spatial_dim: 2 #int
+  latent_dim: 10 #int
+  point_seq: [2500, 144] #list[int], QC only
   stages: 1 #int
-  num_classes: 10
+  loss_fn: "SobolevLoss" #str, SobolevLoss or loss from torch.nn
   optimizer: "Adam" #str, optimizer from torch.optim
   learning_rate: 0.01 #float
 
   conv_params:
-    in_points: [1024] #list[int]
-    out_points: [512] #list[int]
-    in_channels: [3] #list[int]
-    out_channels: [6] #list[int]
+    in_points: [2500] #list[int]
+    out_points: [144] #list[int]
+    in_channels: [1] #list[int]
+    out_channels: [2] #list[int]
     bias: [True] #list[bool]
     filter_seq: [[4, 4]] #[list[int]], QC only
     filter_mode: ["single"] #string <single|share_in|nested>, QC only
@@ -44,12 +45,16 @@ model:
 
 #PT LightningDataModule arguments
 data:
-  module: "modelnet_data" #str <grid_data|mesh_data>
-  data_dir: "data/modelnet40" #str
-  batch_size: 8 #int
+  module: "mesh_data" #str <grid_data|mesh_data>
+  data_dir: "data/ignition_center_cut_uniform_mesh" #str
+  spatial_dim: 2 #int
+  num_points: 2500 #int, mesh only
+  batch_size: 16 #int
+  channels: [1] #list[int], AE only
   shuffle: True #bool
 
 #Miscellaneous arguments
 misc:
+  make_gif: True #bool
   compute_stats: True #bool
   early_stopping: False #bool
