--- a/experiments/tests/test_CAE_pool.yaml
+++ b/experiments/tests/test_CAE_pool.yaml
@@ -18,13 +18,13 @@ train:
   # log_every_n_steps: #int
   enable_progress_bar: True #bool
   # profiler: #str
-  max_epochs: 2 #int
+  max_epochs: 10 #int
   # max_steps: #int
 
 #Model arguments
 model:
   type: "CAE" #str <CAE|QCAE|QCNN>
-  module: "skip" #str <skip|pool>, CAE and QCAE only
+  module: "pool" #str <skip|pool>, CAE and QCAE only
   spatial_dim: 2 #int
   latent_dim: 10 #int
   stages: 1 #int
@@ -42,7 +42,7 @@ model:
 #PT LightningDataModule arguments
 data:
   module: "grid_data" #str <grid_data|mesh_data>
-  data_dir: "data/ignition_center_cut_grid" #str
+  data_dir: "data/ignition_grid" #str
   spatial_dim: 2 #int
   batch_size: 16 #int
   size: 50 #int, grid only
