--- a/experiments/tests/test_CAE_skip.yaml
+++ b/experiments/tests/test_CAE_skip.yaml
@@ -18,7 +18,7 @@ train:
   # log_every_n_steps: #int
   enable_progress_bar: True #bool
   # profiler: #str
-  max_epochs: 50 #int
+  max_epochs: 10 #int
   # max_steps: #int
 
 #Model arguments
@@ -42,7 +42,7 @@ model:
 #PT LightningDataModule arguments
 data:
   module: "grid_data" #str <grid_data|mesh_data>
-  data_dir: "data/ignition_center_cut_grid" #str
+  data_dir: "data/ignition_grid" #str
   spatial_dim: 2 #int
   batch_size: 16 #int
   size: 50 #int, grid only
