--- a/experiments/tests/test_QCAE_pool.yaml
+++ b/experiments/tests/test_QCAE_pool.yaml
@@ -18,13 +18,13 @@ train:
   # log_every_n_steps: #int
   enable_progress_bar: True #bool
   # profiler: #str
-  max_epochs: 2 #int
+  max_epochs: 10 #int
   # max_steps: #int
 
 #Model arguments
 model:
   type: "QCAE" #str <CAE|QCAE|QCNN>
-  module: "skip" #str <skip|pool>, CAE and QCAE only
+  module: "pool" #str <skip|pool>, CAE and QCAE only
   spatial_dim: 2 #int
   latent_dim: 10 #int
   point_seq: [1740, 144] #list[int], QC only
@@ -46,7 +46,7 @@ model:
 #PT LightningDataModule arguments
 data:
   module: "mesh_data" #str <grid_data|mesh_data>
-  data_dir: "data/ignition_center_cut_mesh" #str
+  data_dir: "data/ignition_mesh" #str
   spatial_dim: 2 #int
   num_points: 1740 #int, mesh only
   batch_size: 16 #int
