--- a/experiments/tests/test_QCAE_pool_uniform.yaml
+++ b/experiments/tests/test_QCAE_pool_uniform.yaml
@@ -14,17 +14,17 @@ train:
   enable_checkpointing: False #bool
   check_val_every_n_epoch: 1 #int
   default_root_dir: "./lightning_logs" #str
-  logger: False #bool
+  logger: True #bool
   # log_every_n_steps: #int
   enable_progress_bar: True #bool
   # profiler: #str
-  max_epochs: 2 #int
+  max_epochs: 10 #int
   # max_steps: #int
 
 #Model arguments
 model:
   type: "QCAE" #str <CAE|QCAE|QCNN>
-  module: "skip" #str <skip|pool>, CAE and QCAE only
+  module: "pool" #str <skip|pool>, CAE and QCAE only
   spatial_dim: 2 #int
   latent_dim: 10 #int
   point_seq: [2500, 144] #list[int], QC only
@@ -46,7 +46,7 @@ model:
 #PT LightningDataModule arguments
 data:
   module: "mesh_data" #str <grid_data|mesh_data>
-  data_dir: "data/ignition_center_cut_uniform_mesh" #str
+  data_dir: "data/ignition_uniform_mesh" #str
   spatial_dim: 2 #int
   num_points: 2500 #int, mesh only
   batch_size: 16 #int
@@ -55,6 +55,6 @@ data:
 
 #Miscellaneous arguments
 misc:
-  make_gif: False #bool
-  compute_stats: False #bool
+  make_gif: True #bool
+  compute_stats: True #bool
   early_stopping: False #bool
