--- a/experiments/tests/test_QCAE_skip.yaml
+++ b/experiments/tests/test_QCAE_skip.yaml
@@ -18,7 +18,7 @@ train:
   # log_every_n_steps: #int
   enable_progress_bar: True #bool
   # profiler: #str
-  max_epochs: 2 #int
+  max_epochs: 10 #int
   # max_steps: #int
 
 #Model arguments
@@ -46,7 +46,7 @@ model:
 #PT LightningDataModule arguments
 data:
   module: "mesh_data" #str <grid_data|mesh_data>
-  data_dir: "data/ignition_center_cut_mesh" #str
+  data_dir: "data/ignition_mesh" #str
   spatial_dim: 2 #int
   num_points: 1740 #int, mesh only
   batch_size: 16 #int
