--- a/experiments/tests/test_QCNN.yaml
+++ b/experiments/tests/test_QCNN.yaml
@@ -14,11 +14,11 @@ train:
   enable_checkpointing: False #bool
   check_val_every_n_epoch: 1 #int
   default_root_dir: "./lightning_logs" #str
-  logger: False #bool
+  logger: True #bool
   # log_every_n_steps: #int
   enable_progress_bar: True #bool
   # profiler: #str
-  max_epochs: 2 #int
+  max_epochs: 10 #int
   # max_steps: #int
 
 #Model arguments
