--- a/experiments/ignition/skip_qcae.yaml
+++ b/experiments/ignition/skip_qcae.yaml
@@ -5,9 +5,9 @@
 #Comment out options you aren't using
 train:
   accelerator: "gpu" #str, e.g. "gpu"
-  devices: 1 #int
+  devices: 2 #int
   # num_nodes: #int
-  # strategy: "ddp_sharded" #str
+  strategy: "ddp_sharded" #str
   # precision: #str
   # auto_scale_batch_size: #bool
   # auto_select_gpus: #bool
@@ -36,7 +36,7 @@ model:
   conv_params:
     in_points: [9074, 2500, 400] #list[int]
     out_points: [2500, 400, 100] #list[int]
-    in_channels: [4, 12, 20] #list[int]
+    in_channels: [4, 8, 16] #list[int]
     out_channels: [8, 16, 24] #list[int]
     bias: [True] #list[bool]
     filter_seq: [[4, 4]] #[list[int]], QC only
@@ -49,7 +49,7 @@ data:
   data_dir: "data/ignition_mesh" #str
   spatial_dim: 2 #int
   num_points: 9074 #int, mesh only
-  batch_size: 8 #int
+  batch_size: 16 #int
   channels: [] #list[int], AE only
   shuffle: True #bool
 
