--- a/experiments/tests/test_qcae_skip_uniform.yaml
+++ b/experiments/tests/test_qcae_skip_uniform.yaml
@@ -27,17 +27,17 @@ model:
   module: "skip" #str <skip|pool>, CAE and QCAE only
   spatial_dim: 2 #int
   latent_dim: 10 #int
-  point_seq: [9074, 144] #list[int], QC only
+  point_seq: [2500, 144] #list[int], QC only
   stages: 1 #int
-  loss_fn: "MSELoss" #str, SobolevLoss or loss from torch.nn
+  loss_fn: "SobolevLoss" #str, SobolevLoss or loss from torch.nn
   optimizer: "Adam" #str, optimizer from torch.optim
   learning_rate: 0.01 #float
 
   conv_params:
-    in_points: [9074] #list[int]
+    in_points: [2500] #list[int]
     out_points: [144] #list[int]
-    in_channels: [1] #list[int]
-    out_channels: [2] #list[int]
+    in_channels: [4] #list[int]
+    out_channels: [4] #list[int]
     bias: [True] #list[bool]
     filter_seq: [[4, 4]] #[list[int]], QC only
     filter_mode: ["single"] #string <single|share_in|nested>, QC only
@@ -46,11 +46,11 @@ model:
 #PT LightningDataModule arguments
 data:
   module: "mesh_data" #str <grid_data|mesh_data>
-  data_dir: "data/ignition_mesh" #str
+  data_dir: "data/ignition_uniform_mesh" #str
   spatial_dim: 2 #int
-  num_points: 9074 #int, mesh only
+  num_points: 2500 #int, mesh only
   batch_size: 16 #int
-  channels: [1] #list[int], AE only
+  channels: [] #list[int], AE only
   shuffle: True #bool
 
 #Miscellaneous arguments
