--- a/experiments/ignition/skip_qcae.yaml
+++ b/experiments/ignition/skip_qcae.yaml
@@ -16,7 +16,7 @@ train:
   default_root_dir: "./lightning_logs" #str
   logger: True #bool
   # log_every_n_steps: #int
-  enable_progress_bar: True #bool
+  enable_progress_bar: False #bool
   # profiler: #str
   max_epochs: 15000 #int
   # max_steps: #int
@@ -36,8 +36,8 @@ model:
   conv_params:
     in_points: [9074, 2500, 400] #list[int]
     out_points: [2500, 400, 100] #list[int]
-    in_channels: [4, 8, 16] #list[int]
-    out_channels: [8, 16, 24] #list[int]
+    in_channels: [4, 16, 64] #list[int]
+    out_channels: [16, 32, 64] #list[int]
     bias: [True] #list[bool]
     filter_seq: [[4, 4]] #[list[int]], QC only
     filter_mode: ["single"] #string <single|share_in|nested>, QC only
@@ -50,7 +50,7 @@ data:
   spatial_dim: 2 #int
   num_points: 9074 #int, mesh only
   batch_size: 16 #int
-  channels: [1,0,2,3] #list[int], AE only
+  channels: [0,1,2,3] #list[int], AE only
   shuffle: True #bool
 
 #Miscellaneous arguments
