--- a/experiments/ignition/skip_qcae.yaml
+++ b/experiments/ignition/skip_qcae.yaml
@@ -8,7 +8,7 @@ train:
   devices: 2 #int
   # num_nodes: #int
   strategy: "ddp_sharded" #str
-  # precision: #str
+  precision: 16 #str
   # auto_scale_batch_size: #bool
   # auto_select_gpus: #bool
   enable_checkpointing: True #bool
