--- a/experiments/ignition/makskip_qcae.yaml
+++ b/experiments/ignition/makskip_qcae.yaml
@@ -16,10 +16,10 @@ train:
 #Model building arguments
 model:
   type: "QCAE" #str <CAE|QCAE|QCNN>
-  module: pool
+  module: "pool"
   spatial_dim: 2 #int dimension of the convolution in the CNN
-  latent_dim: 50 #int
-  point_seq: [2500, 625] #list[int], QC only
+  latent_dim: 150 #int
+  point_seq: [9074, 2500, 625] #list[int], QC only
   stages: 1
   learning_rate: 0.01
   loss_fn: 'MSELoss'
@@ -28,10 +28,10 @@ model:
   conv_type: "quadrature" #str "standard" or "quadrature"
 
   conv_params:
-    in_points: [2500, 2500]
+    in_points: [9074, 2500]
     out_points: [2500, 625]
     filter_seq: [[16,16,16]]
-    in_channels: [1, 16] #list of length == stages+1 
+    in_channels: [1, 16] #list of length == stages+1
     out_channels: [16, 16] #list of length == stages+1 or length == 1
     bias: [False] #list of length == stages+1 or length == 1
     filter_mode: ['single']
@@ -39,10 +39,10 @@ model:
 #Data loader arguments
 data:
   module: "mesh_data" #str <grid_data|mesh_data>
-  data_dir: "data/ignition_grid" #str
+  data_dir: "data/ignition_mesh" #str
   spatial_dim: 2 #int
   batch_size: 8 #int
-  num_points: 2500 
+  num_points: 9074
   channels: [1] #list
   shuffle: True
   num_workers: 8
