Changing a few tests and fixing the config file bug.

--- a/experiments/ignition/qcae_pool_uniform.yaml
+++ b/experiments/ignition/qcae_pool_uniform.yaml
@@ -7,7 +7,7 @@ train:
   accelerator: "gpu" #str, e.g. "gpu"
   devices: -1 #int
   # num_nodes: #int
-  strategy: "ddp_find_unused_parameters_false" #str
+  # strategy: "ddp_find_unused_parameters_false" #str
   # precision: #str
   # auto_scale_batch_size: #bool
   # auto_select_gpus: #bool
