--- a/experiments/ignition/qcae_pool.yaml
+++ b/experiments/ignition/qcae_pool.yaml
@@ -11,14 +11,14 @@ train:
   # precision: #str
   # auto_scale_batch_size: #bool
   # auto_select_gpus: #bool
-  enable_checkpointing: False #bool
+  enable_checkpointing: True #bool
   check_val_every_n_epoch: 1 #int
   default_root_dir: "./lightning_logs" #str
-  logger: False #bool
+  logger: True #bool
   # log_every_n_steps: #int
   enable_progress_bar: True #bool
   # profiler: #str
-  max_epochs: 200 #int
+  max_epochs: 10000 #int
   # max_steps: #int
 
 #Model arguments
@@ -27,19 +27,19 @@ model:
   module: "pool" #str <skip|pool>, CAE and QCAE only
   spatial_dim: 2 #int
   latent_dim: 50 #int
-  point_seq: [2189, 2500, 625] #list[int], QC only
-  stages: 1 #int
+  point_seq: [2189, 2304, 576, 144] #list[int], QC only
+  stages: 2 #int
   loss_fn: "MSELoss" #str, SobolevLoss or loss from torch.nn
   optimizer: "Adam" #str, optimizer from torch.optim
   learning_rate: 0.01 #float
 
   conv_params:
-    in_points: [2189, 2500] #list[int]
-    out_points: [2500, 625] #list[int]
-    in_channels: [1, 16] #list[int]
-    out_channels: [16, 16] #list[int]
+    in_points: [2189, 2304, 576] #list[int]
+    out_points: [2304, 576, 144] #list[int]
+    in_channels: [4, 8, 8] #list[int]
+    out_channels: [8, 8, 8] #list[int]
     bias: [False] #list[bool]
-    filter_seq: [[16, 16]] #[list[int]], QC only
+    filter_seq: [[4, 4, 8, 8, 8, 4, 4]] #[list[int]], QC only
     filter_mode: ["single"] #string <single|share_in|nested>, QC only
 
 
@@ -49,8 +49,8 @@ data:
   data_dir: "data/ignition_mesh" #str
   spatial_dim: 2 #int
   num_points: 2189 #int, mesh only
-  batch_size: 16 #int
-  channels: [1] #list[int], AE only
+  batch_size: 32 #int
+  channels: [0,1,2,3] #list[int], AE only
   shuffle: True #bool
 
 #Miscellaneous arguments
