--- a/experiments/tests/test_vcae_pool.yaml
+++ b/experiments/tests/test_vcae_pool.yaml
@@ -23,12 +23,12 @@ train:
 
 #Model arguments
 model:
-  type: "CAE" #str <CAE|QCAE|QCNN>
+  type: "VCAE" #str <CAE|QCAE|QCNN>
   module: "pool" #str <skip|pool>, CAE and QCAE only
   spatial_dim: 2 #int
   latent_dim: 10 #int
   stages: 1 #int
-  loss_fn: "SobolevLoss" #str, SobolevLoss or loss from torch.nn
+  loss_fn: "MSELoss" #str, SobolevLoss or loss from torch.nn
   optimizer: "Adam" #str, optimizer from torch.optim
   learning_rate: 0.01 #float
 
@@ -41,11 +41,11 @@ model:
 
 #PT LightningDataModule arguments
 data:
-  module: "grid_data" #str <grid_data|mesh_data>
-  data_dir: "data/ignition_grid" #str
+  module: "mesh_data" #str <grid_data|mesh_data>
+  data_dir: "data/ignition_mesh" #str
   spatial_dim: 2 #int
+  num_points: 9074
   batch_size: 16 #int
-  size: 50 #int, grid only
   # stride: #int, grid only
   channels: [1] #list[int]
   shuffle: True #bool
