--- a/experiments/ignition/vcae.yaml
+++ b/experiments/ignition/vcae.yaml
@@ -26,6 +26,7 @@ model:
   type: "VCAE" #str <CAE|QCAE>
   module: "pool" #str <skip|pool>, CAE and QCAE only
   spatial_dim: 2 #int, AE only
+  vox_size: [0.02, 0.02]
   latent_dim: 50 #int, AE only
   stages: 1 #int
   loss_fn: "MSELoss" #str, SobolevLoss or loss from torch.nn, AE only
