--- a/experiments/tests/test_vcae.yaml
+++ b/experiments/tests/test_vcae.yaml
@@ -26,6 +26,7 @@ model:
   type: "VCAE" #str <CAE|QCAE|QCNN>
   module: "pool" #str <skip|pool>, CAE and QCAE only
   spatial_dim: 2 #int
+  vox_size: [0.02, 0.02]
   latent_dim: 10 #int
   stages: 1 #int
   loss_fn: "MSELoss" #str, SobolevLoss or loss from torch.nn
