--- a/experiments/flow/pvcae.yaml
+++ b/experiments/flow/pvcae.yaml
@@ -50,7 +50,7 @@ model:
 #PT LightningDataModule arguments
 data:
   module: "mesh_data" #str <grid_data|mesh_data>
-  data_dir: "data/ignition_mesh" #str
+  data_dir: "data/flow_mesh" #str
   spatial_dim: 2 #int
   num_points: 7613
   batch_size: 32 #int
