--- a/experiments/tests/test_pvcae.yaml
+++ b/experiments/tests/test_pvcae.yaml
@@ -27,8 +27,8 @@ model:
   module: "pool" #str <skip|pool>, CAE and QCAE only
   spatial_dim: 2 #int
   vox_size: [0.02, 0.02]
-  conv_latent_dim: 40 #int
-  point_latent_dim: 10
+  conv_latent_dim: 10 #int
+  point_latent_dim: 40
   conv_stages: 1 #int
   point_stages: 2
   loss_fn: "MSELoss" #str, SobolevLoss or loss from torch.nn
@@ -44,15 +44,15 @@ model:
 
   point_params:
     in_channels: [1, 2]
-    out_channels: [2, 2]
+    out_channels: [2, 1]
     bias: [False]
 
 #PT LightningDataModule arguments
 data:
   module: "mesh_data" #str <grid_data|mesh_data>
-  data_dir: "data/flow_mesh" #str
+  data_dir: "data/ignition_mesh" #str
   spatial_dim: 2 #int
-  num_points: 7613
+  num_points: 9074
   batch_size: 16 #int
   # stride: #int, grid only
   channels: [0] #list[int]
