--- a/experiments/ignition_mesh/test/qcae_skip.yaml
+++ b/experiments/ignition_mesh/test/qcae_skip.yaml
@@ -27,15 +27,15 @@ model:
   module: "skip" #str <skip|pool>, CAE and QCAE only
   spatial_dim: 2 #int
   latent_dim: 10 #int
-  point_seq: [9074, 144] #list[int], QC only
-  stages: 1 #int
+  point_seq: [2189, 576, 144] #list[int], QC only
+  stages: 2 #int
   loss_fn: "MSELoss" #str, SobolevLoss or loss from torch.nn
   optimizer: "Adam" #str, optimizer from torch.optim
   learning_rate: 0.01 #float
 
   conv_params:
-    in_points: [9074] #list[int]
-    out_points: [144] #list[int]
+    in_points: [2189, 576] #list[int]
+    out_points: [576, 144] #list[int]
     in_channels: [4] #list[int]
     out_channels: [4] #list[int]
     bias: [True] #list[bool]
@@ -48,7 +48,7 @@ data:
   module: "mesh_data" #str <grid_data|mesh_data>
   data_dir: "data/ignition_mesh" #str
   spatial_dim: 2 #int
-  num_points: 9074 #int, mesh only
+  num_points: 2189 #int, mesh only
   batch_size: 16 #int
   channels: [0,1,2,3] #list[int], AE only
   shuffle: True #bool
