PVCAE and VCAE experiments with 1M params.

--- a/experiments/ignition_mesh/paper/vcae.yaml
+++ b/experiments/ignition_mesh/paper/vcae.yaml
@@ -35,8 +35,8 @@ model:
 
   conv_params:
     kernel_size: [3]
-    in_channels: [1, 16]
-    out_channels: [16, 16]
+    in_channels: [1, 4]
+    out_channels: [4, 8]
     bias: [False]
     padding: [same]
 
@@ -52,6 +52,6 @@ data:
 
 #Miscellaneous arguments
 misc:
-  make_gif: True #bool, AE only
+  make_gif: False #bool, AE only
   compute_stats: True #bool
   early_stopping: False #bool
