--- a/experiments/ignition_grid/paper/qcae_pool.yaml
+++ b/experiments/ignition_grid/paper/qcae_pool.yaml
@@ -7,7 +7,7 @@ train:
   accelerator: "gpu" #str, e.g. "gpu"
   devices: -1 #int
   # num_nodes: #int
-  strategy: "ddp_find_unused_parameters_false" #int
+  strategy: "ddp_find_unused_parameters_false" #str
   # precision: #str
   # auto_scale_batch_size: #bool
   # auto_select_gpus: #bool
@@ -16,42 +16,45 @@ train:
   default_root_dir: "./lightning_logs" #str
   logger: True #bool
   # log_every_n_steps: #int
-  enable_progress_bar: False #bool
+  enable_progress_bar: True #bool
   # profiler: #str
   max_epochs: 25000 #int
   # max_steps: #int
 
 #Model arguments
 model:
-  type: "VCAE" #str <CAE|QCAE>
+  type: "QCAE" #str <CAE|QCAE|QCNN>
   module: "pool" #str <skip|pool>, CAE and QCAE only
-  spatial_dim: 2 #int, AE only
-  vox_size: [0.02, 0.02]
-  latent_dim: 50 #int, AE only
+  spatial_dim: 2 #int
+  latent_dim: 50 #int
+  point_seq: [2500, 2500, 625] #list[int], QC only
   stages: 1 #int
-  loss_fn: "MSELoss" #str, SobolevLoss or loss from torch.nn, AE only
+  loss_fn: "MSELoss" #str, SobolevLoss or loss from torch.nn
   optimizer: "Adam" #str, optimizer from torch.optim
   learning_rate: 0.01 #float
 
   conv_params:
-    kernel_size: [3]
-    in_channels: [1, 4]
-    out_channels: [4, 8]
-    bias: [False]
-    padding: [same]
+    in_points: [2500, 2500] #list[int]
+    out_points: [2500, 625] #list[int]
+    in_channels: [1, 16] #list[int]
+    out_channels: [16, 16] #list[int]
+    bias: [False] #list[bool]
+    filter_seq: [[16, 16, 16]] #[list[int]], QC only
+    filter_mode: ["single"] #string <single|share_in|nested>, QC only
+
 
 #PT LightningDataModule arguments
 data:
   module: "mesh_data" #str <grid_data|mesh_data>
-  data_dir: "data/ignition_mesh" #str
+  data_dir: "data/ignition_grid" #str
   spatial_dim: 2 #int
-  num_points: 2189
+  num_points: 2500 #int, mesh only
   batch_size: 8 #int
-  channels: [1] #list[int]
+  channels: [1] #list[int], AE only
   shuffle: True #bool
 
 #Miscellaneous arguments
 misc:
-  make_gif: False #bool, AE only
+  make_gif: False #bool
   compute_stats: True #bool
   early_stopping: False #bool
