--- a/experiments/ignition_grid/paper/standard_cae_pool.yaml
+++ b/experiments/ignition_grid/paper/standard_cae_pool.yaml
@@ -2,7 +2,7 @@
 train:
   accelerator: "gpu" #str e.g. "gpu"
   devices: -1
-  strategy: "ddp_find_unused_parameters_false" #str
+  strategy: "ddp" #str
   # precision: #str
   # num_nodes: #int
   # auto_scale_batch_size: #bool
@@ -28,17 +28,17 @@ model:
     kernel_size: [3] #list
     in_channels: [1, 16] #list of length == stages+1
     out_channels: [16, 16] #list of length == stages+1 or length == 1
-    bias: [False, False, False] #list of length == stages+1 or length == 1
+    bias: [False] #list of length == stages+1 or length == 1
     padding: ['same']
 
 #Data loader arguments
 data:
   data_dir: "data/ignition_grid" #str
+  module: "grid_data" #str <grid_data|mesh_data>
   spatial_dim: 2 #int
   batch_size: 8 #int
   size: 50 #int
   stride: 50 #int
-  flatten: False #bool, flatten for quadrature
   channels: [1] #list
   shuffle: True
   num_workers: 4
