--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@ data/flow_mesh/*
 data/ignition_grid/*
 data/ignition_mesh/*
 data/ignition_uniform_mesh/*
+
+# OPOSSUM
+core/torch_quadconv/utils/liboposum.so
