--- a/experiments/ignition_grid/paper/qcae_pool_learn_weights_tanh_false.yaml
+++ b/experiments/ignition_grid/paper/qcae_pool_learn_weights_tanh_false.yaml
@@ -33,8 +33,8 @@ model:
   optimizer: "Adam" #str, optimizer from torch.optim
   learning_rate: 0.01 #float
   quad_map: 'param_quad'
-  weight_activation: 'Sigmoid'
-  normalize_weights: True
+  weight_activation: 'Tanh'
+  normalize_weights: False
 
   conv_params:
     in_points: [2500, 2500] #list[int]
