--- a/experiments/ignition_grid/paper/qcae_pool.yaml
+++ b/experiments/ignition_grid/paper/qcae_pool.yaml
@@ -27,7 +27,7 @@ model:
   module: "pool" #str <skip|pool>, CAE and QCAE only
   spatial_dim: 2 #int
   latent_dim: 50 #int
-  point_seq: [2500, 2500, 625] #list[int], QC only
+  point_seq: [2500, 2500] #list[int], QC only
   stages: 1 #int
   loss_fn: "SobolevLoss" #str, SobolevLoss or loss from torch.nn
   optimizer: "Adam" #str, optimizer from torch.optim
