--- a/.gitignore
+++ b/.gitignore
@@ -3,46 +3,8 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-# C extensions
-*.so
-
 # Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
 *.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-cover/
-
-# Sphinx documentation
-docs/_build/
 
 # Jupyter Notebook
 .ipynb_checkpoints
@@ -61,5 +23,11 @@ env.bak/
 venv.bak/
 conda/
 
-# mkdocs documentation
-/site
+# Data
+data/flow_mesh/*
+data/ignition_grid/*
+data/ignition_mesh/*
+data/ignition_uniform_mesh/*
+
+# OPOSSUM
+core/torch_quadconv/utils/libopossum.so
