Adding torch_quadconv.utils as package in pyproject.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ dependencies = [
 ]
 
 [tool.setuptools]
-packages = ["torch_quadconv"]
+packages = ["torch_quadconv", "torch_quadconv.utils"]
 
 [project.optional-dependencies]
 test = ["pytest"]
