Changing package structure a bit, and setting up OPOSSUM.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,4 @@
-include README.md
 include LICENSE
 include CITATION
 
-recursive-include tests *.py
+include torch_quadconv/utils/libagglomerate.so
